@@ -1,3 +1,7 @@
+2013-02-07  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fix max attempts message
+
 2013-02-06  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Add translation view helper with formal/informal salutation option
